--- a/Quiz_dataset analysis.ipynb
+++ b/Quiz_dataset analysis.ipynb
@@ -1632,7 +1632,7 @@
    "source": [
     "### Hyperparameter Tunning\n",
     "\n",
-    "Lets tuned some hyperparameters to see if we can obtain a low ias and low varince of the RandomForesstRegressor and the ExtraTressRegressor. This would help our model not to overfit or underfit."
+    "Lets tune some hyperparameters to see if we can obtain a low bias and low variance of the RandomForestRegressor and the ExtraTreesRegressor. This would help our model not to overfit or underfit."
    ]
   },
   {
